# sendmail

./: .env.example  .gitignore  README.md  pyproject.toml
src/sendmail_mcp/: __init__.py  cli.py  config.py  db.py  outlook.py  policy.py  repository.py  schemas.py  server.py  service.py  smtp_adapter.py  template_engine.py
src/sendmail_mcp/adapters/: __init__.py  imap.py  smtp.py
src/sendmail_mcp/services/: __init__.py  common.py  operations.py  submission.py  worker.py
